# linux

./: README.md  pack_bools.cc  unpack_bools.cc
HTML_Cleaner/: cleaner  main.cpp
dcheck/: CMakeLists.txt  dcheck.cc  dcheck.hh  domain_checker.cc  help.cc  logo.cc  main.cc  read_configuration.cc
dcheck/dcheck_v2/: Makefile  dcheck  dcheck.h  dlist  domain_checker.c  help.c  logo.c  main.c
ds/: dlist
ds/ds_v1/: ds-csd.c  ds-logo.c  ds.h  main.c
ds/ds_v1_1/: ds-line.c  ds-logo.c  ds.h  main.c
ds/ds_v1_2/: ds-csd.c  ds-logo.c  main.c
ds/ds_v1_3/: ds-fsize.c  ds-help.c  ds-logo.c  main.c
passgen/: main.cpp  passgen
pbash/: main.cpp  pbash
pupd/: CMakeLists.txt  pupd  upd.cc
pupd/upd_v2/: upd_v2.cc
pupd/upd_v3/: upd_v3.cc
pupd/upd_v4/: CMakeLists.txt  command_generator.cc  detect_package_manager.cc  help.cc  is_locale_available.cc  logo.cc  main.cc  upd.cc  upd.hh
pupd/upd_v5-1-1/: main.c  upd.h  upd_help.c  upd_logo.c
pupd/upd_v5-1-2/: main.c  upd.h  upd_detect_package_manager.c  upd_logo.c  version.h
pwc/: main.cpp  pwc
signal/: signal  signal.cpp
sysinfo/: sysinfo  sysinfo.cpp
tcpip/: c.cc  c_echo.cc  c_echo_thread.cc  c_echo_thread_2.cc  s.cc  s_fork.cc  s_fork_echo.cc  s_fork_echo_sig.cc  s_fork_echo_sig_log.cc  tcpip.hh
thread/: async_async.cc  async_cat.cc  async_get.cc  async_packaged_task.cc  async_promise.cc  async_shared_future.cc  async_status.cc  async_wait.cc  packaged_task.cc  promise.cc
thread/pool_optimized/: CMakeLists.txt  main.cc
thread/pool_optimized/include/: t_pool.hh
thread/pool_optimized/src/: t_pool.cc
upd/: upd  upd.cpp
upd/v4/: CMakeLists.txt  detect_package_manager.cc  help.cc  is_locale_available.cc  logo.cc  main.cc
(+44 files in other folders)
